--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 title:            mdw.la
 description:      'Matt Welsh'
 url:              http://mdwelsh.github.io
-baseurl:          /
+#baseurl:          /
 
 author:
   name:           'Matt Welsh'
