--- a/astro/package.json
+++ b/astro/package.json
@@ -33,7 +33,8 @@
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
     "@divriots/jampack": "^0.23.2",
-    "@swc/core-darwin-arm64": "^1.5.2",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.48",
