--- a/astro/package.json
+++ b/astro/package.json
@@ -24,7 +24,7 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "satori": "^0.10.11",
-    "sharp": "^0.33.3",
+    "sharp": "0.32.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
