Try pinning sharp.

--- a/astro/package.json
+++ b/astro/package.json
@@ -53,6 +53,9 @@
     "react-dom": "^18.2.0",
     "vite": "^5.2.11"
   },
+  "resolutions": {
+    "sharp": "0.32.6"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
